# PointCloudDescriptors-Linux-

./: .gitignore  README.md
PointCloudDescriptors/: CMakeLists.txt
PointCloudDescriptors/CMake/: CMakeCache.txt  Makefile  cmake_install.cmake
PointCloudDescriptors/CMake/PointCloudDescriptors/: Makefile  cmake_install.cmake
PointCloudDescriptors/PointCloudDescriptors/: CMakeCache.txt  CMakeLists.txt  PointCloudDescriptor.h
src/: CMakeLists.txt  PointCloudDescriptor.cpp  PointCloudDescriptor.h  cnpy_header_only.h  main.cpp
